fix: build gradle